# sweatpy

./: .dockerignore  .gitignore  .travis.yml  404.html  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  index.html  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint.yml  publish.yml  publishdocs.yml  test.yml
athletic_pandas/: algorithms.py  exceptions.py  helpers.py  mixins.py  models.py  validators.py
athletic_pandas/algorithms/: __init__.py  critical_power.py  extended_critical_power.py  w_prime_balance.py
changelog/: index.html
contributing/: index.html
docker/: Dockerfile.jupyter  Dockerfile.lint  Dockerfile.mkdocs  Dockerfile.test  docker-compose.docs.yml  docker-compose.lint.yml  docker-compose.test.yml
docs/: mkdocs.yml
docs/docs/: CNAME  Changelog.md  Contributing.md  Untitled.ipynb  changelog.md  contributing.md  index.md
docs/docs/Loading data/: Example_data.md  FIT files.ipynb
docs/docs/features/: Metrics.ipynb  (+5 more)
features/Metrics/: index.html
features/Power duration modelling/: index.html
features/data_loading/: index.html
features/example_data/: index.html
features/nomenclature/: index.html
sweat/: __init__.py  base.py  constants.py  exceptions.py  models.py  pandas.py  utils.py
sweat/algorithms/: heartrate_models.py  main.py  metrics.py  streams.py  w_prime_balance.py
sweat/examples/: index.yml  utils.py
sweat/hrm/: heartrate_models.py
sweat/io/: exceptions.py  fit.py  fit_profile.json  generic.py  goldencheetah.py  gpx.py  models.py  strava.py  tcx.py  utils.py
sweat/metrics/: core.py  power.py
sweat/models/: base.py  dataframes.py  exceptions.py  helpers.py  mixins.py
sweat/pdm/: critical_power.py  regressors.py  w_prime_balance.py
tests/: conftest.py  test_algorithms.py  test_models.py  test_pandas.py  test_utils.py
tests/algorithms/: test_critical_power.py  test_heartrate_models.py  test_main.py  test_metrics.py  test_streams.py  test_w_prime_balance.py
tests/example_files/: activity_1202065_1354978421.json  athlete_1202065.json  workout_1_short.csv
tests/examples/: test_utils.py
tests/fixtures/: workout_1.csv
tests/hrm/: test_heartrate_models.py
tests/io/: test_fit.py  test_generic.py  test_goldencheetah.py  test_gpx.py  test_strava.py  test_tcx.py  test_utils.py  utils.py
tests/metrics/: test_core.py  test_power.py
tests/models/: test_models.py
tests/pdm/: test_critical_power.py  test_regressors.py  test_w_prime_balance.py
(+35 files in other folders)
