[tool.poetry]
name = "sweat"
version = "0.21.0"
description = "Workout analysis"
license = "MIT"
authors = ["Aart Goossens <aart@goossens.me>"]
readme = "README.md"
homepage = "https://github.com/goldencheetah/sweatpy"
repository = "https://github.com/goldencheetah/sweatpy"
documentation = "https://github.com/goldencheetah/sweatpy"

[tool.poetry.dependencies]
python = "^3.6.1"
fitparse = "^1.1.0"
lmfit = "^1.0.0"
scipy = "^1.4.1"
pandas = "^1.0.3"
requests = "^2.23.0"
pydantic = "^1.4"
pyyaml = "^5.3.1"
scikit-learn = "^0.23.1"
stravalib = "^0.10.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
mkdocs = "^1.1"
mkdocs-material = "^5.1.0"

# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
black = "^19.10b0"
mknotebooks = "^0.6.0"
vcrpy = "^4.0.2"
openpyxl = "^3.0.7"
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38,py39,py3.10

[testenv]
whitelist_externals = poetry
passenv = PYTHONDONTWRITEBYTECODE
commands =
    # About the --no-root flag: https://github.com/python-poetry/poetry/issues/1204
    poetry install -v --no-root
    poetry run pytest tests/ {posargs}
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
